--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,5 +3,5 @@ private_key_file=~/.ssh/id_ansible
 remote_user=ansible
 become=yes
 become_method=sudo
-bedome_user=root
+become_user=root
 host_key_checking=false
