--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- name: create docker group
+  group: name=docker state=present
+  
 - name: Add Users
   user: name={{item.name}} state=present groups=admin
   with_items: "{{admin}}"
